fix(quality): resolve SonarQube findings across filters, security, and tests
Addresses a batch of Sonar rules flagged in review: S1130 (over-broad
throws Exception), S5778 (multi-invocation assertThrows lambdas), S6885
(Math.min/max clamp), S7467 (unused catch variable), S2259 (nullable
Jwt#getAudience), S119 (generic type parameter naming), S6204 (get(0) vs
getFirst()), and an ignored CountDownLatch#await result. Also converts
AudienceValidator and two test fixtures to records, removes the dead
CustomerConstants/OrderConstants classes, and simplifies a retry loop
whose bound was unreachable in practice.